# exqudens-py-usb

./: .env  CMakeLists.txt  CMakePresets.json  conanfile.py  pyproject.toml  readme.md
cmake/: vscode.cmake
src/main/cpp/exqudens/usb/pybind/: client.cpp
src/main/py/exqudens/usb/: client.py
src/test/py/system/: test_exqudens_usb_client.py
